# Recommender-System-using-Personal-Spotify-Data

./: .gitignore  README.md  connect_to_api.py  decision_tree.ipynb  f1_scores.json  final_results.ipynb  get_training_testing_and_evaluation_data.ipynb  helper_data_functions.py  k-nearest_neighbours.ipynb  logistic_regression.ipynb  music_data.py  naive_bayes.ipynb  pyproject.toml  random_forest.ipynb  requirements.txt  send_recommended_playlists_to_spotify.py  spotify_credentials_template.json  stochastic_gradient_descent.ipynb  support_vector_machine.ipynb  verify_track_data.py  xgboost.ipynb
.ipynb_checkpoints/: logistic_regression-checkpoint.ipynb  stochastic_gradient_descent-checkpoint.ipynb
model/: X_test.pkl  X_train.pkl  about_this_directory.txt  y_test.pkl  y_train.pkl
recommended_track_ids/: about_this_directory.txt  recommended_tracks_k_nearest_neighbours.pkl  recommended_tracks_random_forest.pkl
spotify_data/: about_this_directory.txt  eval_tracks_df.pkl  random_tracks_ids.pkl  recommended_tracks.pkl  saved_tracks_ids.pkl  top_tracks_ids.pkl  top_tracks_of_top_artists.pkl  tracks_features.pkl
