[tool.poetry]
name = "recommender-system-using-personal-spotify-data"
version = "0.1.0"
description = ""
authors = ["Purefekt <roonyyo007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.18.0"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
